trunk/Archive2/4b/f1166a2d724d7d/output
main.cpp: In function 'int main()':
main.cpp:17:16: error: array must be initialized with a brace-enclosed initializer
     int b[2] = a;
                ^
main.cpp:17:9: warning: unused variable 'b' [-Wunused-variable]
     int b[2] = a;
         ^
